// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledInput should render with maximum props 1`] = `
<div
  className="container"
>
  <div
    className="uui-label-top"
  >
    <div
      className="labelWrapper"
    >
      <label
        className="uui-label"
      >
        Test label
        <div
          className="optionalFieldWrapper"
        >
          <div
            className="uui-labeled-input-optional"
          >
            This field is optional
          </div>
        </div>
      </label>
    </div>
    <div />
  </div>
  <div
    className="uui-labeled-input-char-counter"
  >
    0/10
  </div>
</div>
`;

exports[`LabeledInput should render with minimum props 1`] = `
<div
  className="container"
>
  <div
    className="uui-label-top"
  >
    <div
      className="labelWrapper"
    >
      <label
        className="uui-label"
      >
        Test label
      </label>
    </div>
    <div />
  </div>
</div>
`;
